--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources> xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Just Java</string>
 
     <!-- The hint text that ask user to input their name [CHAR LIMIT=NONE]-->
@@ -10,24 +10,27 @@
     <!-- The chocolate toppings checkbox [CHAR LIMIT=NONE]-->
     <string name="chocolate_checkbox">Chocolate</string>
     <!-- Header text for quantity of coffee {CHAR LIMIT=NONE]-->
-    <string name="initial_quantity">Quantity</string>
+    <string name="quantity">Quantity</string>
+    <!-- Initial value of quantity [CHAR LIMIT=NONE] -->
+    <string name="initial_quantity">2</string>
     <!-- Header text for order summary [CHAR LIMIT=NONE]-->
     <string name="order_summary">Order Summary</string>
     <!-- Total price of coffee [CHAR LIMIT=NONE] -->
-    <string name="initial_total_price">$5</string>
+    <string name="initial_total_price">$10</string>
     <!-- The order checkbox [CHAR LIMIT=NONE] -->
-    <string name="order_checkbox">Order</string>
+    <string name="order">Order</string>
 
-    <!-- The user name for the order summary [CHAR LIMIT=NONE] -->
-    <string name="order_summary_name">Name</string>
+    <!-- The user's name for the order summary [CHAR LIMIT=NONE] -->
+    <string name="order_summary_name">Name:
+        <xliff:g id="userName" example="Amy">%s</xliff:g></string>
     <!-- Ask user if they want to add whipped cream? [CHAR LIMIT=NONE]-->
-    <string name="add_whipped_cream">Add whipped cream?</string>
+    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
     <!-- Ask user if they want to add chocolate? [CHAR LIMIT=NONE]-->
-    <string name="add_chocolate">Add chocolate?</string>
+    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
     <!-- Display quantity of coffee [CHAR LIMIT=NONE]-->
-    <string name="order_summary_quantity">Quantity :</string>
+    <string name="order_summary_quantity">Quantity : <xliff:g id="quantity" example="2">%d</xliff:g></string>
     <!-- Display total price of coffee [CHAR LIMIT=NONE] -->
-    <string name="total_price">Total : $</string>
+    <string name="order_summary_price">Total : $<xliff:g id="price" example="$10">%s</xliff:g></string>
     <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
     <string name="thank_you">Thank you!</string>
 
