--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,15 @@
     <string name="order_summary_name">Name:
         <xliff:g id="userName" example="Amy">%s</xliff:g></string>
     <!-- Ask user if they want to add whipped cream? [CHAR LIMIT=NONE]-->
-    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
+    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="yes">%s</xliff:g></string>
     <!-- Ask user if they want to add chocolate? [CHAR LIMIT=NONE]-->
-    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
+    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="yes">%s</xliff:g></string>
+
+    <!-- This a string of yes, used when user wants a topping [CHAR LIMIT=NONE] -->
+    <string name="yes">Yes</string>
+    <!-- This a string of no, used when user dont want a topping [CHAR LIMIT=NONE] -->
+    <string name="no">No</string>
+
     <!-- Display quantity of coffee [CHAR LIMIT=NONE]-->
     <string name="order_summary_quantity">Quantity : <xliff:g id="quantity" example="2">%d</xliff:g></string>
     <!-- Display total price of coffee [CHAR LIMIT=NONE] -->
@@ -34,8 +40,9 @@
     <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
     <string name="thank_you">Thank you!</string>
 
-    <!-- The text message for the user when their order exceed the possible amount [CHAR LIMIT=NONE] -->
+    <!-- This message appear when user try to order more than 100 cups of coffees [CHAR LIMIT=NONE] -->
     <string name="not_more_than_100">You cannot have more than 100 cups of coffees</string>
-    <!-- The text message for the user when their order goes less than the possibe amount [CHAR LIMIT=NONE] -->
+    <!-- This message appear when user try to order less than 1 cup of coffee [CHAR LIMIT=NONE] -->
     <string name="not_less_than_1">You cannot have less than 1 cup of coffee</string>
+
 </resources>
